--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
+  image_picker: ^0.8.4+4
+  firebase_storage: ^11.6.0
+
 
 dev_dependencies:
   flutter_test:
